<resources>
    <string name="app_name">Easy FTP</string>
    <string name="start_server">Start Server</string>
    <string name="stop_server">Stop Server</string>
    <string name="server_stopped">Server Status: Stopped</string>
    <string name="server_running">Server Status: Running</string>
    <string name="server_starting">Server Status: Starting...</string>
    <string name="server_error">Server Status: Error</string>
    <string name="connect_to">Connect via FTP Client to:</string>
    <string name="address_placeholder">ftp://---.---.---.---:2221</string>
    <string name="credentials">User: android / Pass: android</string>
    <string name="notification_channel_name">FTP Server Status</string>
    <string name="notification_channel_desc">Shows the running status of the FTP Server</string>
    <string name="ftp_service_notification_title">FTP Server Running</string>
    <string name="widget_text_stopped">FTP Stopped</string>
    <string name="widget_text_running">FTP Running</string>
    <string name="widget_start">Start</string>
    <string name="widget_stop">Stop</string>
    <string name="grant_permissions">Grant Permissions</string>
    <string name="wifi_required_error">WiFi connection is required to start the FTP server.</string>

</resources>