<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/server_stopped"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect_to"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/tvAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address_placeholder"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textIsSelectable="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/tvCredentials"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credentials"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="24dp"/>

    <Button
        android:id="@+id/btnStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_server"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/btnStop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop_server"
        android:enabled="false"/> <Button
        android:id="@+id/btnGrantPermissions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grant_permissions"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:visibility="gone"/> </LinearLayout>